--- a/assets/enu.css
+++ b/assets/enu.css
@@ -1,35 +1,19 @@
 body {
   background-color: #0b0517;
   margin: 0;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-}
-
-.hero {
-  grid-area: 1 / 1 / 2 / 4;
-}
-
-.hero-image {
-  display: grid;
-  width: 100%;
+  font-size: 36pt;
+  color: #fff;
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
 .links {
-  grid-area: 2 / 1 / 3 / 4;
-  text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  font-size: 24pt;
-  color: #fff;
-  padding: 10pt;
+  padding: 48pt 10pt 24pt 10pt;
+  border-bottom: #FF73FD 1pt solid;
 }
 
 .links a {
   display: inline-block;
-  color: #fff;
   text-decoration: none;
   background: #000;
   border: #FF73FD 1pt solid;
@@ -37,8 +21,54 @@ body {
   padding: 5pt 20pt;
   width: 5em;
   margin: 5pt;
-
+  color: #fff;
 }
+
+.hero {
+  border-bottom: 1pt #FF73FD solid;
+}
+
+.hero-image {
+  display: grid;
+  width: 100%;
+}
+
+
+.info {
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  padding: 24pt 10%;
+}
+
+.info2 {
+  padding: 24pt 10%;
+  border: #FF73FD solid;
+  border-width: 1pt 0pt 0pt;
+  font-size: 24pt;
+  background-color: #000;
+}
+
+.info2 a {
+  color: #FF73FD;
+}
+
+.videos {
+  display: grid;
+  border: #FF73FD solid;
+  border-width: 1pt 0pt;
+}
+
+.videos video {
+  width: 100%;
+}
+
+.footer {
+  padding: 12pt;
+  border-top: #FF73FD solid;
+  border-width: 1pt 0pt 0pt;
+  font-size: 12pt;
+}
+
+
 
 /*.div2 { grid-area: 2 / 1 / 3 / 2; }*/
 /*.div3 { grid-area: 2 / 2 / 3 / 3; }*/
